--- a/src/styles.css
+++ b/src/styles.css
@@ -49,15 +49,16 @@ h1 {
   font-family: "Cormorant Garamond", serif;
   font-size: 7rem;
   font-weight: 400;
-  line-height: 0.8;
-  margin: 0;
+  line-height: 1;
+  margin: 1;
+  padding-top: 3rem;
 }
 
 h2 {
   font-size: 2rem;
   font-weight: 400;
   margin: 0;
-  padding-top: 1rem;
+  padding-top: 6rem;
 }
 
 h3 {
@@ -123,3 +124,18 @@ img.socialIcon {
   height: 30px;
   width: 30px;
 }
+html {
+  scroll-behavior: smooth;
+}
+
+/* add a slide in animation to the page */
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(10%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}   
